@@ -24,6 +24,7 @@ Fixes
 Enhancements
 
 Changes
+  * Removes deprecated ProgressMeter (Issue #2739)
   * Removes deprecated MDAnalysis.units.N_Avogadro (PR #2737)
   * Dropped Python 2 support
 
